# small3d-first-games

./: .gitignore  .gitmodules  README.md  appveyor.yml  build-all-mingw.bat  build-all-vs.bat  build-all.sh
avoidthebug/: CMakeLists.txt  README.md
avoidthebug-android/: .gitignore  README.md  build.gradle
avoidthebug-android/app/: build.gradle
avoidthebug-android/app/src/main/: AndroidManifest.xml
avoidthebug-android/app/src/main/assets/resources/shaders/: textureShader.spv
avoidthebug-android/app/src/main/cpp/: GameLogic.cpp  main.cpp
avoidthebug-android/app/src/main/cpp/include/: GameLogic.hpp
avoidthebug-ios/: README.md
avoidthebug-ios/avoidthebug-ios/: GameLogic.cpp  Info.plist  ViewController.mm  main.m
avoidthebug-ios/avoidthebug-ios.xcodeproj/: project.pbxproj
avoidthebug-ios/avoidthebug-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
avoidthebug-ios/avoidthebug-ios.xcodeproj/xcshareddata/xcschemes/: small3dios.xcscheme
avoidthebug-ios/avoidthebug-ios/Base.lproj/: Main.storyboard
avoidthebug/android/: .gitignore  README.md  build.gradle  gradle.properties
avoidthebug/android/app/: CMakeLists.txt  build.gradle
avoidthebug/android/app/src/main/res/values/: strings.xml
avoidthebug/android/gradle/wrapper/: gradle-wrapper.properties
avoidthebug/assets/: bug.blend  goat.blend  tree.blend
avoidthebug/ios/: .gitignore  README.md
avoidthebug/ios/avoidthebug-ios/: AppDelegate.h  AppDelegate.m  GameLogic.hpp  KeyInput.hpp
avoidthebug/ios/avoidthebug-ios.xcodeproj/: project.pbxproj
avoidthebug/ios/avoidthebug-ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
avoidthebug/ios/avoidthebug-ios/Base.lproj/: Main.storyboard
avoidthebug/resources/models/: tree.glb
avoidthebug/src/: CMakeLists.txt  GameLogic.cpp  GameLogic.hpp  main.cpp
ball/: CMakeLists.txt  README.md
ball/src/: CMakeLists.txt  main.cpp
chasethegoat/: CMakeLists.txt  LICENSE  README.md
chasethegoat/resources/models/: bug.glb
chasethegoat/src/: CMakeLists.txt  GameLogic.cpp  GameLogic.hpp  KeyInput.hpp  main.cpp
frogremixed/: CMakeLists.txt  LICENSE  README.md
frogremixed/assets/: car.blend  frog.blend  plank.blend  wheel.blend
frogremixed/resources/sounds/: README.txt
frogremixed/src/: CMakeLists.txt  Car.cpp  Car.hpp  Frog.cpp  Frog.hpp  Menu.cpp  Menu.hpp  Plank.cpp  Plank.hpp  main.cpp
gloom/: README.md
gloom/src/: CMakeLists.txt  Game.cpp
islet-hell-android/: settings.gradle
islet-hell-android/app/: CMakeLists.txt  build.gradle
islet-hell-android/app/src/main/: AndroidManifest.xml
islet-hell-android/app/src/main/assets/resources/: map.txt
islet-hell-android/app/src/main/assets/resources/shaders/: perspectiveMatrixLightedShader.spv
islet-hell-android/app/src/main/cpp/: Enemy.hpp  GameLoopAndInput.hpp  GameObject.cpp  KeyInput.hpp  Map.cpp  Map.hpp  OctPyramid.cpp  Particle.cpp  Pyramid.cpp  Settings.hpp  main.cpp
islet-hell-android/gradle/wrapper/: gradle-wrapper.properties
islet-hell-ios/islet-hell-ios/: AppDelegate.m  Enemy.cpp  GameLoopAndInput.cpp  GameLoopAndInput.hpp  GameObject.hpp  KeyInput.hpp  Map.cpp  Map.hpp  Particle.hpp  Pyramid.hpp  ViewController.m  flags.c  flags.h
islet-hell-ios/islet-hell-ios.xcodeproj/: project.pbxproj
islet-hell-ios/islet-hell-ios/Base.lproj/: Main.storyboard
islet-hell-ios/islet-hell-ios/resources1/: plane.glb
serial-model-renderer/: .gitignore  CMakeLists.txt  README.md
serial-model-renderer/resources/models/: goatscale.glb
serial-model-renderer/src/: CMakeLists.txt  CMakeLists.txt.bak  main.cpp
src/: main.cpp  map.txt
