add_executable(ball main.cpp)

target_include_directories(ball PUBLIC "${CMAKE_SOURCE_DIR}/include")

target_include_directories(ball PUBLIC
  ${SMALL3D_INCLUDE_DIR}
  ${GLFW_INCLUDE_DIRS}
  ${Vulkan_INCLUDE_DIR} # Replace with ${OPENGL_INCLUDE_DIR} for OpenGL
  ${PNG_INCLUDE_DIRS}
  ${GLM_INCLUDE_DIRS}
  ${OGG_INCLUDE_DIRS}
  ${VORBIS_INCLUDE_DIR}
  ${PORTAUDIO_INCLUDE_DIRS}
  ${FREETYPE_INCLUDE_DIRS}
  )

target_link_libraries(ball PUBLIC
  ${SMALL3D_LIBRARY}
  # Uncomment for OpenGL
  # ${GLEW_LIBRARIES}
  # ${OPENGL_LIBRARIES}
  ${GLFW_LIBRARIES}
  ${Vulkan_LIBRARIES} # Remove for OpenGL
  ${PNG_LIBRARIES}
  ${VORBIS_LIBRARIES}
  ${OGG_LIBRARIES}
  ${PORTAUDIO_LIBRARIES}
  ${FREETYPE_LIBRARIES}
  )

if(UNIX OR ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" AND NOT
	CMAKE_CXX_COMPILER_VERSION VERSION_LESS 10))
  target_include_directories(ball PUBLIC
    ${BZIP2_INCLUDE_DIRS})
  target_link_libraries(ball PUBLIC
    ${BZIP2_LIBRARIES})
endif(NOT MSVC)

if(WIN32)
  target_link_libraries(ball PUBLIC winmm)
endif(WIN32)

if(APPLE)
  set_target_properties(ball PROPERTIES LINK_FLAGS "-framework \
		AudioUnit -framework AudioToolbox -framework CoreAudio -framework Cocoa \
		-framework IOKit -framework CoreVideo")
endif(APPLE)

if(MSVC)
  set_target_properties(ball PROPERTIES LINK_FLAGS_DEBUG
    "-NODEFAULTLIB:LIBCMTD")
  set_target_properties(ball PROPERTIES LINK_FLAGS_RELEASE
    "-NODEFAULTLIB:LIBCMT")
  
  set_target_properties(ball PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY
    "${small3d_BINARY_DIR}/bin")
endif(MSVC)

if(UNIX AND NOT APPLE)
  target_link_libraries(ball PUBLIC m pthread dl rt X11)
endif()
